--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
+  fluttertoast: ^8.0.9
+  provider: ^6.0.2
+  awesome_notifications: ^0.0.6+10
+  wifi_info_plugin_plus: ^2.0.0
 
 dev_dependencies:
   flutter_test:
